--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -15,7 +15,7 @@
     </table>
   </div>
   <div class="col-md-6"> 
-    <h3>Tuesday 26.09.2023 (Day 2 (R sessions)))</h3>
+    <h3>Tuesday 26.09.2023 (Day 2, R sessions)</h3>
     <table class="table table-striped">
       <tr> <td>     </td>  <td> R and Python in parallel sessions </td> </tr> 
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis</a></td> </tr>
@@ -30,7 +30,7 @@
     </table>
   </div>
     <div class="col-md-6"> 
-    <h3>Tuesday 26.09.2023 (Day 2 (Python sessions)))</h3>
+    <h3>Tuesday 26.09.2023 (Day 2, Python sessions)</h3>
     <table class="table table-striped">
       <tr> <td>     </td>  <td> R and Python in parallel sessions </td> </tr> 
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/python-novice-gapminder/"> Plotting and Programming in Python</a></td> </tr>
